cmake_minimum_required(VERSION 3.20)

set(CXX_FILES dg/audio/devices.cpp dg/dgEngine.cpp dg/gpu.cpp dg/init.cpp dg/internal.cpp dg/options.cpp)

if(DRAGON_BUILD_SHARED)
	set(OLD_BUILD_SHARED ${BUILD_SHARED_LIBS})
	set(BUILD_SHARED_LIBS ON)
	add_subdirectory(glfw)
	add_subdirectory(openal)
	add_library(dragon-0 SHARED ${CXX_FILES})
	set(BUILD_SHARED_LIBS ${OLD_BUILD_SHARED})
else() 
	add_subdirectory(glfw)
	add_subdirectory(openal)
	add_library(dragon-0 STATIC ${CXX_FILES})
endif()
target_include_directories(dragon-0 PUBLIC ${Dragon_INCLUDE_DIRS})
target_link_libraries(dragon-0 PUBLIC ${Dragon_LINK_LIBRARIES} ${Dragon_EXTENSION_TARGETS})
add_library(Dragon::Dragon ALIAS dragon-0)
